SigmaCodebackup3rdSep/objects/Shipment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Details</relationshipLabel>
        <relationshipName>Shipment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Detail</label>
    <nameField>
        <displayFormat>Ship-{0000}</displayFormat>
        <label>Shipment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>